# offscroll

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
scripts/: docker-buildx.sh  smoke-test.sh
src/offscroll/: __init__.py  cli.py  config.py  logging.py  models.py
src/offscroll/curation/: __init__.py  digest.py  editorial.py  selection.py
src/offscroll/ingestion/: __init__.py  clustering.py  embeddings.py  fediverse.py  feeds.py  images.py  opml.py  store.py
src/offscroll/layout/: __init__.py  renderer.py  typst_renderer.py
src/offscroll/layout/styles/: newspaper.css  typography.css
src/offscroll/layout/templates/: base.html  brief.html  brief_group.html  colophon.html  curation_summary.html  editorial_note.html  feature.html  footer.html  image_block.html  masthead.html  pull_quote.html  section.html  standard.html  thread.html
src/offscroll/layout/typst/: newspaper.typ  templates.typ
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_integration_e2e.py  test_models.py  test_ranked_edition.py
tests/curation/: __init__.py  test_digest.py  test_editorial.py  test_selection.py
tests/ingestion/: __init__.py  test_clustering.py  test_embeddings.py  test_fediverse.py  test_feeds.py  test_images.py  test_opml.py  test_store.py
tests/layout/: test_integration.py  test_renderer.py  test_rendering_matrix.py  test_typst_renderer.py
tests/sample_data/editions/: sample_edition.json  sample_edition_briefs_only.json  sample_edition_empty_section.json  sample_edition_full.json
tests/sample_data/feeds/: sample_atom.xml  sample_atom_extended.xml  sample_opml.xml  sample_rss.xml
tests/sample_data/images/: create_placeholder.sh
